--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="./CSS/style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Engage Bakery</title>
+
+    <link rel="stylesheet" href="./CSS/style.css" />
+    <link rel="stylesheet" href="./Css/media.css" />
   </head>
 
   <body>
